# autonomous-wagon

./: .gitignore  QUICKSTART.md  README.md  SETUP_GUIDE.md
.github/: copilot-instructions.md
config/: wagon_params.yaml
launch/: wagon_hardware.launch.py  wagon_simulation.launch.py  wagon_system.launch.py
log/: latest_build
src/control/: package.xml  setup.py
src/control/control/: motor_controller.py  steering_controller.py
src/safety/: package.xml  setup.py
src/safety/safety/: obstacle_detector.py  safety_manager.py
src/sensors/: package.xml  setup.py
src/sensors/sensors/: encoder_node.py  gps_node.py  imu_node.py
src/vision/: package.xml  setup.py
src/vision/vision/: depth_processor.py  target_tracker.py
src/wagon_core/: package.xml  setup.py
src/wagon_core/config/: wagon_params.yaml
src/wagon_core/launch/: wagon_hardware.launch.py  wagon_simulation.launch.py  wagon_system.launch.py
src/wagon_core/wagon_core/: calibration_tool.py  wagon_coordinator.py
